"report check in 2018-09-17"

--- a/stuwork/1amsmith1020.think-java_results.html
+++ b/stuwork/1amsmith1020.think-java_results.html
@@ -55,10 +55,14 @@ Seconds since midnight:39494
 *[BEGIN chapter4]
   [EXPECTED TARGETS] ['Multadd']]
 [COMPILING] Multadd.java
-	[ERROR] Missing Compile Target:Multadd.java
-[SUMMARY] ['Multadd: MISSING']
+	[ERROR] javac failed Multadd.java Multadd.java:1: class, interface, or enum expected
+	public static void Multiadd(String[] args) {
+	              ^
+	1 error
+	
+[SUMMARY] ['Multadd: COMPILE ERROR']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.40
+          [SCORE] 0.50
 
 </pre></body></html>
