--- a/stuwork/Crevin921.think-java_results.html
+++ b/stuwork/Crevin921.think-java_results.html
@@ -17,10 +17,14 @@ Cloning into 'think-java-Crevin921'...
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
-	[ERROR] Missing Compile Target:Date.java
+	[SUCCESSFUL COMPILE] Date.java
+[RUNNING] Date
+-->
+	[ERROR] Runtime Error @ java Date
+
 [COMPILING] Time.java
-	[ERROR] Missing Compile Target:Time.java
-[SUMMARY] ['Date: MISSING', 'Time: MISSING']
+	[SUCCESSFUL COMPILE] Time.java
+[SUMMARY] ['Date: RUNTIME ERROR', 'Time: PASS']
 [DONE chapter2]
 
 *[BEGIN chapter3]
@@ -30,9 +34,11 @@ Cloning into 'think-java-Crevin921'...
 
 *[BEGIN chapter4]
   [EXPECTED TARGETS] ['Multadd']]
-	[ERROR] No chapter work for:chapter4
+[COMPILING] Multadd.java
+	[ERROR] Missing Compile Target:Multadd.java
+[SUMMARY] ['Multadd: MISSING']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.00
+          [SCORE] 0.35
 
 </pre></body></html>
