--- a/stuwork/Fwuff547.think-java_results.html
+++ b/stuwork/Fwuff547.think-java_results.html
@@ -44,10 +44,24 @@ Seconds since midnight: 42630
 *[BEGIN chapter3]
   [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
 [COMPILING] Exercise3.java
-	[ERROR] Missing Compile Target:Exercise3.java
+	[SUCCESSFUL COMPILE] Exercise3.java
+[RUNNING] Exercise3
+-->
+How many seconds?
+	13 seconds is 0 hours, 0 minutes, 0 seconds
+<--
+	[OUTPUT OK]
+
 [COMPILING] Exercise4.java
-	[ERROR] Missing Compile Target:Exercise4.java
-[SUMMARY] ['Exercise3: MISSING', 'Exercise4: MISSING']
+	[SUCCESSFUL COMPILE] Exercise4.java
+[RUNNING] Exercise4
+-->
+I have a number between 1 and 100, guess what it is?
+	You guessed 13, I was thinking of 79, you were 66 off.
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Exercise3: PASS', 'Exercise4: PASS']
 [DONE chapter3]
 
 *[BEGIN chapter4]
@@ -66,6 +80,6 @@ The result is 5.0
 [SUMMARY] ['Multadd: PASS']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.60
+          [SCORE] 1.00
 
 </pre></body></html>
