--- a/stuwork/KaylaRidesBikes.think-java_results.html
+++ b/stuwork/KaylaRidesBikes.think-java_results.html
@@ -29,8 +29,17 @@ American Format:
 	[OUTPUT OK]
 
 [COMPILING] Time.java
-	[ERROR] Missing Compile Target:Time.java
-[SUMMARY] ['Date: PASS', 'Time: MISSING']
+	[SUCCESSFUL COMPILE] Time.java
+[RUNNING] Time
+-->
+Number of seconds since midnight:
+	36047
+	864047
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Date: PASS', 'Time: PASS']
 [DONE chapter2]
 
 *[BEGIN chapter3]
@@ -43,6 +52,6 @@ American Format:
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.00
+          [SCORE] 0.20
 
 </pre></body></html>
