--- a/stuwork/NickPoletti1.think-java_results.html
+++ b/stuwork/NickPoletti1.think-java_results.html
@@ -69,8 +69,8 @@ Exercise4!
 	Can you guess what it is
 	Guess a number: 
 	Your guess is 13
-	The number I was thinking of was 46
-	Your guess was off by: 33
+	The number I was thinking of was 12
+	Your guess was off by: -1
 	
 <--
 	[OUTPUT OK]
@@ -84,11 +84,17 @@ Exercise4!
 	[SUCCESSFUL COMPILE] Multadd.java
 [RUNNING] Multadd
 -->
-	[ERROR] Runtime Error @ java Multadd
+MultAdd Exercise
+	5.0
+	1.0606601717798212
+	1.1629395387920924
+	
+<--
+	[OUTPUT OK]
 
-[SUMMARY] ['Multadd: RUNTIME ERROR']
+[SUMMARY] ['Multadd: PASS']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.95
+          [SCORE] 1.00
 
 </pre></body></html>
