--- a/stuwork/ReidLuhn.think-java_results.html
+++ b/stuwork/ReidLuhn.think-java_results.html
@@ -48,15 +48,22 @@ Hello world!
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
 -->
-	[ERROR] Runtime Error @ java Exercise3
+Enter seconds: That is 0 hours, 0 minutes, and 13 seconds.
+<--
+	[OUTPUT OK]
 
 [COMPILING] Exercise4.java
 	[SUCCESSFUL COMPILE] Exercise4.java
 [RUNNING] Exercise4
 -->
-	[ERROR] Runtime Error @ java Exercise4
+I'm thinking of a number between 1 and 100, can you guess it?
+	Your guess is: 13
+	My number was: 98
+	You were off by: 85
+<--
+	[OUTPUT OK]
 
-[SUMMARY] ['Exercise3: RUNTIME ERROR', 'Exercise4: RUNTIME ERROR']
+[SUMMARY] ['Exercise3: PASS', 'Exercise4: PASS']
 [DONE chapter3]
 
 *[BEGIN chapter4]
@@ -76,6 +83,6 @@ Up and running!
 [SUMMARY] ['Multadd: PASS']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.90
+          [SCORE] 1.00
 
 </pre></body></html>
