--- a/stuwork/gaberoessler.think-java_results.html
+++ b/stuwork/gaberoessler.think-java_results.html
@@ -48,7 +48,17 @@ Tuesday
 
 *[BEGIN chapter3]
   [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
-	[ERROR] No chapter work for:chapter3
+[COMPILING] Exercise3.java
+	[SUCCESSFUL COMPILE] Exercise3.java
+[RUNNING] Exercise3
+-->
+How many seconds? 
+<--
+	[OUTPUT OK]
+
+[COMPILING] Exercise4.java
+	[ERROR] Missing Compile Target:Exercise4.java
+[SUMMARY] ['Exercise3: PASS', 'Exercise4: MISSING']
 [DONE chapter3]
 
 *[BEGIN chapter4]
@@ -66,6 +76,6 @@ The result is 5.0
 [SUMMARY] ['Multadd: PASS']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.60
+          [SCORE] 0.80
 
 </pre></body></html>
