--- a/stuwork/shanebaxter101.think-java_results.html
+++ b/stuwork/shanebaxter101.think-java_results.html
@@ -46,10 +46,30 @@ It has been: 42812.0 seconds since midnight
 *[BEGIN chapter3]
   [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
 [COMPILING] Exercise3.java
-	[ERROR] Missing Compile Target:Exercise3.java
+	[SUCCESSFUL COMPILE] Exercise3.java
+[RUNNING] Exercise3
+-->
+Enter a number of seconds: 
+	That is: 0 hours, 0 minutes, and  13 seconds
+	
+<--
+	[OUTPUT OK]
+
 [COMPILING] Exercise4.java
-	[ERROR] Missing Compile Target:Exercise4.java
-[SUMMARY] ['Exercise3: MISSING', 'Exercise4: MISSING']
+	[SUCCESSFUL COMPILE] Exercise4.java
+[RUNNING] Exercise4
+-->
+Im thinking of a number between 1 and 100,(including both)
+	Can you guess what it is?
+	Type a number: 
+	Your guess is: 13
+	The number I was thinking of was: 25
+	You were off by: -12
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Exercise3: PASS', 'Exercise4: PASS']
 [DONE chapter3]
 
 *[BEGIN chapter4]
@@ -68,6 +88,6 @@ It has been: 42812.0 seconds since midnight
 [SUMMARY] ['Multadd: PASS']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.60
+          [SCORE] 1.00
 
 </pre></body></html>
