--- a/stuwork/MegaMichael1000.think-java_results.html
+++ b/stuwork/MegaMichael1000.think-java_results.html
@@ -43,16 +43,46 @@ Seconds since midnight: 44520.0
 
 *[BEGIN chapter3]
   [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
-	[ERROR] No chapter work for:chapter3
+[COMPILING] Exercise3.java
+	[SUCCESSFUL COMPILE] Exercise3.java
+[RUNNING] Exercise3
+-->
+Enter the amount of seconds: 13 seconds = 0 hours, 0 minutes, 13 seconds.
+	
+<--
+	[OUTPUT OK]
+
+[COMPILING] Exercise4.java
+	[SUCCESSFUL COMPILE] Exercise4.java
+[RUNNING] Exercise4
+-->
+I'm thinking of a number between 1 and 100
+	(including both). Can you guess what it is?
+	Type a number: Your guess is: 13
+	The number I was thinking of is: 60
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Exercise3: PASS', 'Exercise4: PASS']
 [DONE chapter3]
 
 *[BEGIN chapter4]
   [EXPECTED TARGETS] ['Multadd']]
 [COMPILING] Multadd.java
-	[ERROR] Missing Compile Target:Multadd.java
-[SUMMARY] ['Multadd: MISSING']
+	[SUCCESSFUL COMPILE] Multadd.java
+[RUNNING] Multadd
+-->
+5.0
+	1.0606601717798212
+	1.1241498650869424
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Multadd: PASS']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.40
+          [SCORE] 1.00
 
 </pre></body></html>
