"report check in 2018-09-17"

--- a/stuwork/aliyaaware.think-java_results.html
+++ b/stuwork/aliyaaware.think-java_results.html
@@ -46,11 +46,13 @@ It has been 50400 seconds since midnight
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
 -->
-	[ERROR] Runtime Error @ java Exercise3
+How many seconds do you want to convert? 13 seconds = 0 hours, 0 minutes, 13 seconds
+<--
+	[OUTPUT OK]
 
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
-[SUMMARY] ['Exercise3: RUNTIME ERROR', 'Exercise4: MISSING']
+[SUMMARY] ['Exercise3: PASS', 'Exercise4: MISSING']
 [DONE chapter3]
 
 *[BEGIN chapter4]
@@ -70,6 +72,6 @@ It has been 50400 seconds since midnight
 [SUMMARY] ['Multadd: PASS']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.75
+          [SCORE] 0.80
 
 </pre></body></html>
