"report check in 2018-09-18"

--- a/stuwork/Crevin921.think-java_results.html
+++ b/stuwork/Crevin921.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-17
+Run date: 2018-09-18
 <br>Student User: Crevin921
 <br>Project: think-java
 <br>
@@ -29,7 +29,11 @@ Cloning into 'think-java-Crevin921'...
 
 *[BEGIN chapter3]
   [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
-	[ERROR] No chapter work for:chapter3
+[COMPILING] Exercise3.java
+	[ERROR] Missing Compile Target:Exercise3.java
+[COMPILING] Exercise4.java
+	[ERROR] Missing Compile Target:Exercise4.java
+[SUMMARY] ['Exercise3: MISSING', 'Exercise4: MISSING']
 [DONE chapter3]
 
 *[BEGIN chapter4]
