--- a/stuwork/DrKiefer.think-java_results.html
+++ b/stuwork/DrKiefer.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-17
+Run date: 2018-09-18
 <br>Student User: DrKiefer
 <br>Project: think-java
 <br>
@@ -47,24 +47,39 @@ Time Since Midnight: 12: 0: 21
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
 -->
-	[ERROR] Runtime Error @ java Exercise3
+Enter number of seconds: 
+	0: 0: 13
+	
+<--
+	[OUTPUT OK]
 
 [COMPILING] Exercise4.java
 	[SUCCESSFUL COMPILE] Exercise4.java
 [RUNNING] Exercise4
 -->
-	[ERROR] Runtime Error @ java Exercise4
+Im thinking of a number between 1 and 100. Can you guess it?
+	What's your guess? 
+	Your guess is: 13
+	The number I was think of is 93
+	You were off by 80
+	
+<--
+	[OUTPUT OK]
 
-[SUMMARY] ['Exercise3: RUNTIME ERROR', 'Exercise4: RUNTIME ERROR']
+[SUMMARY] ['Exercise3: PASS', 'Exercise4: PASS']
 [DONE chapter3]
 
 *[BEGIN chapter4]
   [EXPECTED TARGETS] ['Multadd']]
 [COMPILING] Multadd.java
-	[ERROR] Missing Compile Target:Multadd.java
-[SUMMARY] ['Multadd: MISSING']
+	[SUCCESSFUL COMPILE] Multadd.java
+[RUNNING] Multadd
+-->
+	[ERROR] Runtime Error @ java Multadd
+
+[SUMMARY] ['Multadd: RUNTIME ERROR']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.70
+          [SCORE] 0.95
 
 </pre></body></html>
