--- a/stuwork/aliyaaware.think-java_results.html
+++ b/stuwork/aliyaaware.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-17
+Run date: 2018-09-18
 <br>Student User: aliyaaware
 <br>Project: think-java
 <br>
@@ -51,8 +51,18 @@ How many seconds do you want to convert? 13 seconds = 0 hours, 0 minutes, 13 sec
 	[OUTPUT OK]
 
 [COMPILING] Exercise4.java
-	[ERROR] Missing Compile Target:Exercise4.java
-[SUMMARY] ['Exercise3: PASS', 'Exercise4: MISSING']
+	[SUCCESSFUL COMPILE] Exercise4.java
+[RUNNING] Exercise4
+-->
+Im thinking of a number between 1-100, can you guess it?
+	Type a number : Your Guess is 13
+	THe number I was thinkin of is: 56
+	You were off by: 43
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Exercise3: PASS', 'Exercise4: PASS']
 [DONE chapter3]
 
 *[BEGIN chapter4]
@@ -72,6 +82,6 @@ How many seconds do you want to convert? 13 seconds = 0 hours, 0 minutes, 13 sec
 [SUMMARY] ['Multadd: PASS']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.80
+          [SCORE] 1.00
 
 </pre></body></html>
