--- a/stuwork/1amsmith1020.think-java_results.html
+++ b/stuwork/1amsmith1020.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-17
+Run date: 2018-09-18
 <br>Student User: 1amsmith1020
 <br>Project: think-java
 <br>
@@ -49,13 +49,31 @@ Seconds since midnight:39494
 
 *[BEGIN chapter3]
   [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
-	[ERROR] No chapter work for:chapter3
+[COMPILING] Exercise3.java
+	[SUCCESSFUL COMPILE] Exercise3.java
+[RUNNING] Exercise3
+-->
+Enter amount of seconds:
+	0 hours 0 minuites 13 seconds 
+<--
+	[OUTPUT OK]
+
+[COMPILING] Exercise4.java
+	[SUCCESSFUL COMPILE] Exercise4.java
+[RUNNING] Exercise4
+-->
+3
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Exercise3: PASS', 'Exercise4: PASS']
 [DONE chapter3]
 
 *[BEGIN chapter4]
   [EXPECTED TARGETS] ['Multadd']]
 [COMPILING] Multadd.java
-	[ERROR] javac failed Multadd.java Multadd.java:1: class, interface, or enum expected
+	[ERROR] javac failed Multadd.java Multadd.java:1: error: class, interface, or enum expected
 	public static void Multiadd(String[] args) {
 	              ^
 	1 error
@@ -63,6 +81,6 @@ Seconds since midnight:39494
 [SUMMARY] ['Multadd: COMPILE ERROR']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.50
+          [SCORE] 0.90
 
 </pre></body></html>
