--- a/stuwork/kaifouts.think-java_results.html
+++ b/stuwork/kaifouts.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-17
+Run date: 2018-09-18
 <br>Student User: kaifouts
 <br>Project: think-java
 <br>
@@ -49,22 +49,22 @@ Time:
 *[BEGIN chapter4]
   [EXPECTED TARGETS] ['Multadd']]
 [COMPILING] Multadd.java
-	[ERROR] javac failed Multadd.java Multadd.java:6: <identifier> expected
+	[ERROR] javac failed Multadd.java Multadd.java:6: error: <identifier> expected
 	System.out.println("Exercise 6...");
 	                  ^
-	Multadd.java:6: illegal start of type
+	Multadd.java:6: error: illegal start of type
 	System.out.println("Exercise 6...");
 	                   ^
-	Multadd.java:9: <identifier> expected
+	Multadd.java:9: error: <identifier> expected
 			System.out.println("multAdd"
 			                  ^
-	Multadd.java:9: illegal start of type
+	Multadd.java:9: error: illegal start of type
 			System.out.println("multAdd"
 			                   ^
-	Multadd.java:9: ')' expected
+	Multadd.java:9: error: ')' expected
 			System.out.println("multAdd"
 			                            ^
-	Multadd.java:12: ';' expected
+	Multadd.java:12: error: ';' expected
 		public static double Multadd(double a, double b, double c){
 		      ^
 	6 errors
