--- a/stuwork/slammensam.think-java_results.html
+++ b/stuwork/slammensam.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-17
+Run date: 2018-09-18
 <br>Student User: slammensam
 <br>Project: think-java
 <br>
@@ -29,11 +29,11 @@ American Date:
 	[OUTPUT OK]
 
 [COMPILING] Time.java
-	[ERROR] javac failed Time.java Time.java:27: cannot find symbol
-	symbol  : method pritnln(int)
-	location: class java.io.PrintStream
+	[ERROR] javac failed Time.java Time.java:27: error: cannot find symbol
 			System.out.pritnln(minute - minute1);
 			          ^
+	  symbol:   method pritnln(int)
+	  location: variable out of type PrintStream
 	1 error
 	
 [SUMMARY] ['Date: PASS', 'Time: COMPILE ERROR']
