"report check in 2018-09-19"

--- a/stuwork/bethtojatjar.think-java_results.html
+++ b/stuwork/bethtojatjar.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-18
+Run date: 2018-09-19
 <br>Student User: bethtojatjar
 <br>Project: think-java
 <br>
@@ -44,7 +44,11 @@ The amount of seconds since midnight is: 39780 seconds
 
 *[BEGIN chapter3]
   [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
-	[ERROR] No chapter work for:chapter3
+[COMPILING] Exercise3.java
+	[ERROR] Missing Compile Target:Exercise3.java
+[COMPILING] Exercise4.java
+	[ERROR] Missing Compile Target:Exercise4.java
+[SUMMARY] ['Exercise3: MISSING', 'Exercise4: MISSING']
 [DONE chapter3]
 
 *[BEGIN chapter4]
