--- a/stuwork/Crevin921.think-java_results.html
+++ b/stuwork/Crevin921.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-18
+Run date: 2018-09-19
 <br>Student User: Crevin921
 <br>Project: think-java
 <br>
@@ -23,8 +23,15 @@ Cloning into 'think-java-Crevin921'...
 	[ERROR] Runtime Error @ java Date
 
 [COMPILING] Time.java
-	[SUCCESSFUL COMPILE] Time.java
-[SUMMARY] ['Date: RUNTIME ERROR', 'Time: PASS']
+	[ERROR] javac failed Time.java Time.java:9: error: ';' expected
+			System.out.print( hour + minute + second)
+			                                         ^
+	Time.java:13: error: class, interface, or enum expected
+	https://books.trinket.io/thinkjava2/chapter2.html
+	^
+	2 errors
+	
+[SUMMARY] ['Date: RUNTIME ERROR', 'Time: COMPILE ERROR']
 [DONE chapter2]
 
 *[BEGIN chapter3]
@@ -43,6 +50,6 @@ Cloning into 'think-java-Crevin921'...
 [SUMMARY] ['Multadd: MISSING']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.35
+          [SCORE] 0.25
 
 </pre></body></html>
