--- a/stuwork/asianaaron2.think-java_results.html
+++ b/stuwork/asianaaron2.think-java_results.html
@@ -7,7 +7,7 @@ Run date: 2018-09-19
 
 ----------------------------------------------------------
 [STUDENT INIT] asianaaron2
-[CLEANUP] Removing project dir: ./stuwork/asianaaron2/think-java-asianaaron2
+[FRESH & CLEAN] @ ./stuwork/asianaaron2/think-java-asianaaron2
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-asianaaron2.git]
 Cloning into 'think-java-asianaaron2'...
