"report check in 2018-09-21"

--- a/stuwork/bealarson82.think-java_results.html
+++ b/stuwork/bealarson82.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-20
+Run date: 2018-09-21
 <br>Student User: bealarson82
 <br>Project: think-java
 <br>
@@ -35,6 +35,18 @@ Hello World!
 
 [COMPILING] Time.java
 	[SUCCESSFUL COMPILE] Time.java
+[RUNNING] Time
+-->
+Number of seconds since midnight: 
+	16259
+	Number of seconds remaining in the day: 
+	70141.0
+	Percentage of the day that has passed: 
+	18.818287%
+	
+<--
+	[OUTPUT OK]
+
 [SUMMARY] ['Date: PASS', 'Time: PASS']
 [DONE chapter2]
 
