--- a/stureports/KaylaRidesBikes.think-java_results.html
+++ b/stureports/KaylaRidesBikes.think-java_results.html
@@ -7,8 +7,13 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] KaylaRidesBikes
-[REUSING WORK]: ./stuwork/KaylaRidesBikes/think-java-KaylaRidesBikes
-[GITWORK] Re-using code.
+[SETUP] Creating student dir:  ./stuwork/KaylaRidesBikes
+[PRE-WARN]: Expected non-empty: ./stuwork/KaylaRidesBikes/think-java-KaylaRidesBikes
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-KaylaRidesBikes.git]
+Cloning into 'think-java-KaylaRidesBikes'...
+	
+[GITWORK DONE]
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
