--- a/stureports/MegaMichael1000.think-java_results.html
+++ b/stureports/MegaMichael1000.think-java_results.html
@@ -7,8 +7,13 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] MegaMichael1000
-[REUSING WORK]: ./stuwork/MegaMichael1000/think-java-MegaMichael1000
-[GITWORK] Re-using code.
+[SETUP] Creating student dir:  ./stuwork/MegaMichael1000
+[PRE-WARN]: Expected non-empty: ./stuwork/MegaMichael1000/think-java-MegaMichael1000
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-MegaMichael1000.git]
+Cloning into 'think-java-MegaMichael1000'...
+	
+[GITWORK DONE]
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
@@ -55,8 +60,8 @@ Enter the amount of seconds: 13 seconds = 0 hours, 0 minutes, 13 seconds.
 I'm thinking of a number between 1 and 100
 	(including both). Can you guess what it is?
 	Type a number: Your guess is: 13
-	The number I was thinking of is: 42
-	You were off by: 29
+	The number I was thinking of is: 35
+	You were off by: 22
 	
 <--
 	[OUTPUT OK]
