--- a/stureports/NickPoletti1.think-java_results.html
+++ b/stureports/NickPoletti1.think-java_results.html
@@ -7,8 +7,13 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] NickPoletti1
-[REUSING WORK]: ./stuwork/NickPoletti1/think-java-NickPoletti1
-[GITWORK] Re-using code.
+[SETUP] Creating student dir:  ./stuwork/NickPoletti1
+[PRE-WARN]: Expected non-empty: ./stuwork/NickPoletti1/think-java-NickPoletti1
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-NickPoletti1.git]
+Cloning into 'think-java-NickPoletti1'...
+	
+[GITWORK DONE]
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
@@ -65,8 +70,8 @@ Exercise4!
 	Can you guess what it is
 	Guess a number: 
 	Your guess is 13
-	The number I was thinking of was 42
-	Your guess was off by: 29
+	The number I was thinking of was 85
+	Your guess was off by: 72
 	
 <--
 	[OUTPUT OK]
