--- a/stureports/aliyaaware.think-java_results.html
+++ b/stureports/aliyaaware.think-java_results.html
@@ -7,8 +7,13 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] aliyaaware
-[REUSING WORK]: ./stuwork/aliyaaware/think-java-aliyaaware
-[GITWORK] Re-using code.
+[SETUP] Creating student dir:  ./stuwork/aliyaaware
+[PRE-WARN]: Expected non-empty: ./stuwork/aliyaaware/think-java-aliyaaware
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-aliyaaware.git]
+Cloning into 'think-java-aliyaaware'...
+	
+[GITWORK DONE]
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
@@ -52,8 +57,8 @@ How many seconds do you want to convert? 13 seconds = 0 hours, 0 minutes, 13 sec
 -->
 Im thinking of a number between 1-100, can you guess it?
 	Type a number : Your Guess is 13
-	THe number I was thinkin of is: 97
-	You were off by: 84
+	THe number I was thinkin of is: 15
+	You were off by: 2
 	
 <--
 	[OUTPUT OK]
