--- a/stureports/DrKiefer.think-java_results.html
+++ b/stureports/DrKiefer.think-java_results.html
@@ -7,8 +7,13 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] DrKiefer
-[REUSING WORK]: ./stuwork/DrKiefer/think-java-DrKiefer
-[GITWORK] Re-using code.
+[SETUP] Creating student dir:  ./stuwork/DrKiefer
+[PRE-WARN]: Expected non-empty: ./stuwork/DrKiefer/think-java-DrKiefer
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-DrKiefer.git]
+Cloning into 'think-java-DrKiefer'...
+	
+[GITWORK DONE]
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
@@ -56,8 +61,8 @@ Enter number of seconds:
 Im thinking of a number between 1 and 100. Can you guess it?
 	What's your guess? 
 	Your guess is: 13
-	The number I was think of is 50
-	You were off by 37
+	The number I was think of is 47
+	You were off by 34
 	
 <--
 	[OUTPUT OK]
