--- a/stureports/Fwuff547.think-java_results.html
+++ b/stureports/Fwuff547.think-java_results.html
@@ -7,8 +7,13 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] Fwuff547
-[REUSING WORK]: ./stuwork/Fwuff547/think-java-Fwuff547
-[GITWORK] Re-using code.
+[SETUP] Creating student dir:  ./stuwork/Fwuff547
+[PRE-WARN]: Expected non-empty: ./stuwork/Fwuff547/think-java-Fwuff547
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-Fwuff547.git]
+Cloning into 'think-java-Fwuff547'...
+	
+[GITWORK DONE]
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
@@ -53,7 +58,7 @@ How many seconds?
 [RUNNING] Exercise4
 -->
 I have a number between 1 and 100, guess what it is?
-	You guessed 13, I was thinking of 1, you were -12 off.
+	You guessed 13, I was thinking of 14, you were 1 off.
 <--
 	[OUTPUT OK]
 
