--- a/stureports/banjojeebus.think-java_results.html
+++ b/stureports/banjojeebus.think-java_results.html
@@ -7,8 +7,13 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] banjojeebus
-[REUSING WORK]: ./stuwork/banjojeebus/think-java-banjojeebus
-[GITWORK] Re-using code.
+[SETUP] Creating student dir:  ./stuwork/banjojeebus
+[PRE-WARN]: Expected non-empty: ./stuwork/banjojeebus/think-java-banjojeebus
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-banjojeebus.git]
+Cloning into 'think-java-banjojeebus'...
+	
+[GITWORK DONE]
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
