--- a/stureports/bealarson82.think-java_results.html
+++ b/stureports/bealarson82.think-java_results.html
@@ -7,8 +7,13 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] bealarson82
-[REUSING WORK]: ./stuwork/bealarson82/think-java-bealarson82
-[GITWORK] Re-using code.
+[SETUP] Creating student dir:  ./stuwork/bealarson82
+[PRE-WARN]: Expected non-empty: ./stuwork/bealarson82/think-java-bealarson82
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-bealarson82.git]
+Cloning into 'think-java-bealarson82'...
+	
+[GITWORK DONE]
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
