--- a/stureports/bethtojatjar.think-java_results.html
+++ b/stureports/bethtojatjar.think-java_results.html
@@ -7,8 +7,13 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] bethtojatjar
-[REUSING WORK]: ./stuwork/bethtojatjar/think-java-bethtojatjar
-[GITWORK] Re-using code.
+[SETUP] Creating student dir:  ./stuwork/bethtojatjar
+[PRE-WARN]: Expected non-empty: ./stuwork/bethtojatjar/think-java-bethtojatjar
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-bethtojatjar.git]
+Cloning into 'think-java-bethtojatjar'...
+	
+[GITWORK DONE]
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
