--- a/stureports/coleschomer.think-java_results.html
+++ b/stureports/coleschomer.think-java_results.html
@@ -7,8 +7,13 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] coleschomer
-[REUSING WORK]: ./stuwork/coleschomer/think-java-coleschomer
-[GITWORK] Re-using code.
+[SETUP] Creating student dir:  ./stuwork/coleschomer
+[PRE-WARN]: Expected non-empty: ./stuwork/coleschomer/think-java-coleschomer
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-coleschomer.git]
+Cloning into 'think-java-coleschomer'...
+	
+[GITWORK DONE]
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
