--- a/stureports/maxckaeh.think-java_results.html
+++ b/stureports/maxckaeh.think-java_results.html
@@ -7,8 +7,13 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] maxckaeh
-[REUSING WORK]: ./stuwork/maxckaeh/think-java-maxckaeh
-[GITWORK] Re-using code.
+[SETUP] Creating student dir:  ./stuwork/maxckaeh
+[PRE-WARN]: Expected non-empty: ./stuwork/maxckaeh/think-java-maxckaeh
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-maxckaeh.git]
+Cloning into 'think-java-maxckaeh'...
+	
+[GITWORK DONE]
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
