--- a/stureports/shanebaxter101.think-java_results.html
+++ b/stureports/shanebaxter101.think-java_results.html
@@ -7,8 +7,13 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] shanebaxter101
-[REUSING WORK]: ./stuwork/shanebaxter101/think-java-shanebaxter101
-[GITWORK] Re-using code.
+[SETUP] Creating student dir:  ./stuwork/shanebaxter101
+[PRE-WARN]: Expected non-empty: ./stuwork/shanebaxter101/think-java-shanebaxter101
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-shanebaxter101.git]
+Cloning into 'think-java-shanebaxter101'...
+	
+[GITWORK DONE]
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
@@ -59,8 +64,8 @@ Im thinking of a number between 1 and 100,(including both)
 	Can you guess what it is?
 	Type a number: 
 	Your guess is: 13
-	The number I was thinking of was: 87
-	You were off by: -74
+	The number I was thinking of was: 22
+	You were off by: -9
 	
 <--
 	[OUTPUT OK]
