--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html><head><title>Project Status Page</title></head>
 <body>
 <table>
-<tr><td> <a href="think-java.html">Think-Java Summary Page</a></td></tr>
+<tr><td> <a href="stureports/think-java.html">Think-Java Summary Page</a></td></tr>
 </table>
 </body>
 <html>
