"report check in 2018-09-23"

--- a/stureports/think-java/ReidLuhn.think-java_results.html
+++ b/stureports/think-java/ReidLuhn.think-java_results.html
@@ -7,8 +7,13 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] ReidLuhn
-[REUSING WORK]: ./stuwork/ReidLuhn/think-java-ReidLuhn
-[GITWORK] Re-using code.
+[SETUP] Creating student dir:  ./stuwork/ReidLuhn
+[PRE-WARN]: Expected non-empty: ./stuwork/ReidLuhn/think-java-ReidLuhn
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-ReidLuhn.git]
+Cloning into 'think-java-ReidLuhn'...
+	
+[GITWORK DONE]
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
@@ -54,8 +59,8 @@ Enter seconds: That is 0 hours, 0 minutes, and 13 seconds.
 -->
 I'm thinking of a number between 1 and 100, can you guess it?
 	Your guess is: 13
-	My number was: 52
-	You were off by: 39
+	My number was: 41
+	You were off by: 28
 <--
 	[OUTPUT OK]
 
