--- a/stureports/think-java/jadenngo13.think-java_results.html
+++ b/stureports/think-java/jadenngo13.think-java_results.html
@@ -7,8 +7,13 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] jadenngo13
-[REUSING WORK]: ./stuwork/jadenngo13/think-java-jadenngo13
-[GITWORK] Re-using code.
+[SETUP] Creating student dir:  ./stuwork/jadenngo13
+[PRE-WARN]: Expected non-empty: ./stuwork/jadenngo13/think-java-jadenngo13
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-jadenngo13.git]
+Cloning into 'think-java-jadenngo13'...
+	
+[GITWORK DONE]
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
@@ -54,8 +59,8 @@ Enter seconds: 13 seconds = 0 hours, 0.0 minutes, and 13 seconds
 [RUNNING] Exercise4
 -->
 Enter a number: Your guess is: 13
-	The number I was thinking of was: 73
-	You were off by: 60
+	The number I was thinking of was: 30
+	You were off by: 17
 	
 <--
 	[OUTPUT OK]
