--- a/stureports/think-java/Marcus620.think-java_results.html
+++ b/stureports/think-java/Marcus620.think-java_results.html
@@ -7,8 +7,13 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] Marcus620
-[REUSING WORK]: ./stuwork/Marcus620/think-java-Marcus620
-[GITWORK] Re-using code.
+[SETUP] Creating student dir:  ./stuwork/Marcus620
+[PRE-WARN]: Expected non-empty: ./stuwork/Marcus620/think-java-Marcus620
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-Marcus620.git]
+Cloning into 'think-java-Marcus620'...
+	
+[GITWORK DONE]
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
