--- a/stureports/think-java/gaberoessler.think-java_results.html
+++ b/stureports/think-java/gaberoessler.think-java_results.html
@@ -7,8 +7,13 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] gaberoessler
-[REUSING WORK]: ./stuwork/gaberoessler/think-java-gaberoessler
-[GITWORK] Re-using code.
+[SETUP] Creating student dir:  ./stuwork/gaberoessler
+[PRE-WARN]: Expected non-empty: ./stuwork/gaberoessler/think-java-gaberoessler
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-gaberoessler.git]
+Cloning into 'think-java-gaberoessler'...
+	
+[GITWORK DONE]
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
