--- a/stureports/think-java/kaifouts.think-java_results.html
+++ b/stureports/think-java/kaifouts.think-java_results.html
@@ -7,8 +7,13 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] kaifouts
-[REUSING WORK]: ./stuwork/kaifouts/think-java-kaifouts
-[GITWORK] Re-using code.
+[SETUP] Creating student dir:  ./stuwork/kaifouts
+[PRE-WARN]: Expected non-empty: ./stuwork/kaifouts/think-java-kaifouts
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-kaifouts.git]
+Cloning into 'think-java-kaifouts'...
+	
+[GITWORK DONE]
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
