--- a/stureports/think-java/notswett.think-java_results.html
+++ b/stureports/think-java/notswett.think-java_results.html
@@ -7,8 +7,13 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] notswett
-[REUSING WORK]: ./stuwork/notswett/think-java-notswett
-[GITWORK] Re-using code.
+[SETUP] Creating student dir:  ./stuwork/notswett
+[PRE-WARN]: Expected non-empty: ./stuwork/notswett/think-java-notswett
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-notswett.git]
+Cloning into 'think-java-notswett'...
+	
+[GITWORK DONE]
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
