--- a/stureports/think-java/tpipitone.think-java_results.html
+++ b/stureports/think-java/tpipitone.think-java_results.html
@@ -7,8 +7,13 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] tpipitone
-[REUSING WORK]: ./stuwork/tpipitone/think-java-tpipitone
-[GITWORK] Re-using code.
+[SETUP] Creating student dir:  ./stuwork/tpipitone
+[PRE-WARN]: Expected non-empty: ./stuwork/tpipitone/think-java-tpipitone
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-tpipitone.git]
+Cloning into 'think-java-tpipitone'...
+	
+[GITWORK DONE]
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
