--- a/stureports/think-java/AdamRashid.think-java_results.html
+++ b/stureports/think-java/AdamRashid.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] AdamRashid
-[SETUP] Creating student dir:  ./stuwork/AdamRashid
-[PRE-WARN]: Expected non-empty: ./stuwork/AdamRashid/think-java-AdamRashid
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-AdamRashid.git]
-Cloning into 'think-java-AdamRashid'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/AdamRashid/think-java-AdamRashid
+[GITWORK] Re-using code.
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
@@ -66,8 +61,8 @@ How many seconds? 13.00 sec = 0 hour, 0 min
 I'm thinking of a number between 1 and 100(Including Both)
 	Can you guess what it is? 
 	Type a number: You guessed: 13
-	The number I was thinking of is: 87
-	You were off by: 74
+	The number I was thinking of is: 63
+	You were off by: 50
 	
 <--
 	[OUTPUT OK]
