--- a/stureports/think-java/asianaaron2.think-java_results.html
+++ b/stureports/think-java/asianaaron2.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] asianaaron2
-[SETUP] Creating student dir:  ./stuwork/asianaaron2
-[PRE-WARN]: Expected non-empty: ./stuwork/asianaaron2/think-java-asianaaron2
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-asianaaron2.git]
-Cloning into 'think-java-asianaaron2'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/asianaaron2/think-java-asianaaron2
+[GITWORK] Re-using code.
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
