--- a/stureports/think-java/AdamRashid.think-java_results.html
+++ b/stureports/think-java/AdamRashid.think-java_results.html
@@ -7,8 +7,13 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] AdamRashid
-[REUSING WORK]: ./stuwork/AdamRashid/think-java-AdamRashid
-[GITWORK] Re-using code.
+[SETUP] Creating student dir:  ./stuwork/AdamRashid
+[PRE-WARN]: Expected non-empty: ./stuwork/AdamRashid/think-java-AdamRashid
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-AdamRashid.git]
+Cloning into 'think-java-AdamRashid'...
+	
+[GITWORK DONE]
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
@@ -61,8 +66,8 @@ How many seconds? 13.00 sec = 0 hour, 0 min
 I'm thinking of a number between 1 and 100(Including Both)
 	Can you guess what it is? 
 	Type a number: You guessed: 13
-	The number I was thinking of is: 63
-	You were off by: 50
+	The number I was thinking of is: 78
+	You were off by: 65
 	
 <--
 	[OUTPUT OK]
