--- a/stureports/think-java/DrKiefer.think-java_results.html
+++ b/stureports/think-java/DrKiefer.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] DrKiefer
-[SETUP] Creating student dir:  ./stuwork/DrKiefer
-[PRE-WARN]: Expected non-empty: ./stuwork/DrKiefer/think-java-DrKiefer
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-DrKiefer.git]
-Cloning into 'think-java-DrKiefer'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/DrKiefer/think-java-DrKiefer
+[GITWORK] Re-using code.
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
@@ -61,8 +56,8 @@ Enter number of seconds:
 Im thinking of a number between 1 and 100. Can you guess it?
 	What's your guess? 
 	Your guess is: 13
-	The number I was think of is 81
-	You were off by 68
+	The number I was think of is 86
+	You were off by 73
 	
 <--
 	[OUTPUT OK]
