--- a/stureports/think-java/Fwuff547.think-java_results.html
+++ b/stureports/think-java/Fwuff547.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] Fwuff547
-[SETUP] Creating student dir:  ./stuwork/Fwuff547
-[PRE-WARN]: Expected non-empty: ./stuwork/Fwuff547/think-java-Fwuff547
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-Fwuff547.git]
-Cloning into 'think-java-Fwuff547'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/Fwuff547/think-java-Fwuff547
+[GITWORK] Re-using code.
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
@@ -58,7 +53,7 @@ How many seconds?
 [RUNNING] Exercise4
 -->
 I have a number between 1 and 100, guess what it is?
-	You guessed 13, I was thinking of 30, you were 17 off.
+	You guessed 13, I was thinking of 33, you were 20 off.
 <--
 	[OUTPUT OK]
 
