--- a/stureports/think-java/Jake4902.think-java_results.html
+++ b/stureports/think-java/Jake4902.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] Jake4902
-[SETUP] Creating student dir:  ./stuwork/Jake4902
-[PRE-WARN]: Expected non-empty: ./stuwork/Jake4902/think-java-Jake4902
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-Jake4902.git]
-Cloning into 'think-java-Jake4902'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/Jake4902/think-java-Jake4902
+[GITWORK] Re-using code.
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
