--- a/stureports/think-java/NickPoletti1.think-java_results.html
+++ b/stureports/think-java/NickPoletti1.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] NickPoletti1
-[SETUP] Creating student dir:  ./stuwork/NickPoletti1
-[PRE-WARN]: Expected non-empty: ./stuwork/NickPoletti1/think-java-NickPoletti1
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-NickPoletti1.git]
-Cloning into 'think-java-NickPoletti1'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/NickPoletti1/think-java-NickPoletti1
+[GITWORK] Re-using code.
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
@@ -70,8 +65,8 @@ Exercise4!
 	Can you guess what it is
 	Guess a number: 
 	Your guess is 13
-	The number I was thinking of was 56
-	Your guess was off by: 43
+	The number I was thinking of was 46
+	Your guess was off by: 33
 	
 <--
 	[OUTPUT OK]
