--- a/stureports/think-java/aliyaaware.think-java_results.html
+++ b/stureports/think-java/aliyaaware.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] aliyaaware
-[SETUP] Creating student dir:  ./stuwork/aliyaaware
-[PRE-WARN]: Expected non-empty: ./stuwork/aliyaaware/think-java-aliyaaware
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-aliyaaware.git]
-Cloning into 'think-java-aliyaaware'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/aliyaaware/think-java-aliyaaware
+[GITWORK] Re-using code.
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
@@ -57,8 +52,8 @@ How many seconds do you want to convert? 13 seconds = 0 hours, 0 minutes, 13 sec
 -->
 Im thinking of a number between 1-100, can you guess it?
 	Type a number : Your Guess is 13
-	THe number I was thinkin of is: 84
-	You were off by: 71
+	THe number I was thinkin of is: 76
+	You were off by: 63
 	
 <--
 	[OUTPUT OK]
