--- a/stureports/think-java/banjojeebus.think-java_results.html
+++ b/stureports/think-java/banjojeebus.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] banjojeebus
-[SETUP] Creating student dir:  ./stuwork/banjojeebus
-[PRE-WARN]: Expected non-empty: ./stuwork/banjojeebus/think-java-banjojeebus
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-banjojeebus.git]
-Cloning into 'think-java-banjojeebus'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/banjojeebus/think-java-banjojeebus
+[GITWORK] Re-using code.
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
