--- a/stureports/think-java/bealarson82.think-java_results.html
+++ b/stureports/think-java/bealarson82.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] bealarson82
-[SETUP] Creating student dir:  ./stuwork/bealarson82
-[PRE-WARN]: Expected non-empty: ./stuwork/bealarson82/think-java-bealarson82
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-bealarson82.git]
-Cloning into 'think-java-bealarson82'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/bealarson82/think-java-bealarson82
+[GITWORK] Re-using code.
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
