--- a/stureports/think-java/heypoppins.think-java_results.html
+++ b/stureports/think-java/heypoppins.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] heypoppins
-[SETUP] Creating student dir:  ./stuwork/heypoppins
-[PRE-WARN]: Expected non-empty: ./stuwork/heypoppins/think-java-heypoppins
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-heypoppins.git]
-Cloning into 'think-java-heypoppins'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/heypoppins/think-java-heypoppins
+[GITWORK] Re-using code.
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
