--- a/stureports/think-java/jadenngo13.think-java_results.html
+++ b/stureports/think-java/jadenngo13.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] jadenngo13
-[SETUP] Creating student dir:  ./stuwork/jadenngo13
-[PRE-WARN]: Expected non-empty: ./stuwork/jadenngo13/think-java-jadenngo13
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-jadenngo13.git]
-Cloning into 'think-java-jadenngo13'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/jadenngo13/think-java-jadenngo13
+[GITWORK] Re-using code.
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
@@ -59,8 +54,8 @@ Enter seconds: 13 seconds = 0 hours, 0.0 minutes, and 13 seconds
 [RUNNING] Exercise4
 -->
 Enter a number: Your guess is: 13
-	The number I was thinking of was: 90
-	You were off by: 77
+	The number I was thinking of was: 79
+	You were off by: 66
 	
 <--
 	[OUTPUT OK]
