--- a/stureports/think-java/notswett.think-java_results.html
+++ b/stureports/think-java/notswett.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] notswett
-[SETUP] Creating student dir:  ./stuwork/notswett
-[PRE-WARN]: Expected non-empty: ./stuwork/notswett/think-java-notswett
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-notswett.git]
-Cloning into 'think-java-notswett'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/notswett/think-java-notswett
+[GITWORK] Re-using code.
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
