--- a/stureports/think-java/shanebaxter101.think-java_results.html
+++ b/stureports/think-java/shanebaxter101.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] shanebaxter101
-[SETUP] Creating student dir:  ./stuwork/shanebaxter101
-[PRE-WARN]: Expected non-empty: ./stuwork/shanebaxter101/think-java-shanebaxter101
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-shanebaxter101.git]
-Cloning into 'think-java-shanebaxter101'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/shanebaxter101/think-java-shanebaxter101
+[GITWORK] Re-using code.
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
@@ -64,8 +59,8 @@ Im thinking of a number between 1 and 100,(including both)
 	Can you guess what it is?
 	Type a number: 
 	Your guess is: 13
-	The number I was thinking of was: 95
-	You were off by: -82
+	The number I was thinking of was: 17
+	You were off by: -4
 	
 <--
 	[OUTPUT OK]
