--- a/stureports/think-java/tpipitone.think-java_results.html
+++ b/stureports/think-java/tpipitone.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] tpipitone
-[SETUP] Creating student dir:  ./stuwork/tpipitone
-[PRE-WARN]: Expected non-empty: ./stuwork/tpipitone/think-java-tpipitone
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-tpipitone.git]
-Cloning into 'think-java-tpipitone'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/tpipitone/think-java-tpipitone
+[GITWORK] Re-using code.
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
