--- a/stureports/think-java/1amsmith1020.think-java_results.html
+++ b/stureports/think-java/1amsmith1020.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] 1amsmith1020
-[SETUP] Creating student dir:  ./stuwork/1amsmith1020
-[PRE-WARN]: Expected non-empty: ./stuwork/1amsmith1020/think-java-1amsmith1020
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-1amsmith1020.git]
-Cloning into 'think-java-1amsmith1020'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/1amsmith1020/think-java-1amsmith1020
+[GITWORK] Re-using code.
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
@@ -63,7 +58,7 @@ Enter amount of seconds:
 	[SUCCESSFUL COMPILE] Exercise4.java
 [RUNNING] Exercise4
 -->
-11
+89
 	
 <--
 	[OUTPUT OK]
