--- a/stureports/think-java/Crevin921.think-java_results.html
+++ b/stureports/think-java/Crevin921.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] Crevin921
-[SETUP] Creating student dir:  ./stuwork/Crevin921
-[PRE-WARN]: Expected non-empty: ./stuwork/Crevin921/think-java-Crevin921
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-Crevin921.git]
-Cloning into 'think-java-Crevin921'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/Crevin921/think-java-Crevin921
+[GITWORK] Re-using code.
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
