--- a/stureports/think-java/KaylaRidesBikes.think-java_results.html
+++ b/stureports/think-java/KaylaRidesBikes.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] KaylaRidesBikes
-[SETUP] Creating student dir:  ./stuwork/KaylaRidesBikes
-[PRE-WARN]: Expected non-empty: ./stuwork/KaylaRidesBikes/think-java-KaylaRidesBikes
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-KaylaRidesBikes.git]
-Cloning into 'think-java-KaylaRidesBikes'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/KaylaRidesBikes/think-java-KaylaRidesBikes
+[GITWORK] Re-using code.
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
