--- a/stureports/think-java/MegaMichael1000.think-java_results.html
+++ b/stureports/think-java/MegaMichael1000.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] MegaMichael1000
-[SETUP] Creating student dir:  ./stuwork/MegaMichael1000
-[PRE-WARN]: Expected non-empty: ./stuwork/MegaMichael1000/think-java-MegaMichael1000
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-MegaMichael1000.git]
-Cloning into 'think-java-MegaMichael1000'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/MegaMichael1000/think-java-MegaMichael1000
+[GITWORK] Re-using code.
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
@@ -60,8 +55,8 @@ Enter the amount of seconds: 13 seconds = 0 hours, 0 minutes, 13 seconds.
 I'm thinking of a number between 1 and 100
 	(including both). Can you guess what it is?
 	Type a number: Your guess is: 13
-	The number I was thinking of is: 29
-	You were off by: 16
+	The number I was thinking of is: 78
+	You were off by: 65
 	
 <--
 	[OUTPUT OK]
