--- a/stureports/think-java/ReidLuhn.think-java_results.html
+++ b/stureports/think-java/ReidLuhn.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] ReidLuhn
-[SETUP] Creating student dir:  ./stuwork/ReidLuhn
-[PRE-WARN]: Expected non-empty: ./stuwork/ReidLuhn/think-java-ReidLuhn
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-ReidLuhn.git]
-Cloning into 'think-java-ReidLuhn'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/ReidLuhn/think-java-ReidLuhn
+[GITWORK] Re-using code.
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
@@ -59,8 +54,8 @@ Enter seconds: That is 0 hours, 0 minutes, and 13 seconds.
 -->
 I'm thinking of a number between 1 and 100, can you guess it?
 	Your guess is: 13
-	My number was: 45
-	You were off by: 32
+	My number was: 98
+	You were off by: 85
 <--
 	[OUTPUT OK]
 
