--- a/stureports/think-java/bethtojatjar.think-java_results.html
+++ b/stureports/think-java/bethtojatjar.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] bethtojatjar
-[SETUP] Creating student dir:  ./stuwork/bethtojatjar
-[PRE-WARN]: Expected non-empty: ./stuwork/bethtojatjar/think-java-bethtojatjar
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-bethtojatjar.git]
-Cloning into 'think-java-bethtojatjar'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/bethtojatjar/think-java-bethtojatjar
+[GITWORK] Re-using code.
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
