--- a/stureports/think-java/coleschomer.think-java_results.html
+++ b/stureports/think-java/coleschomer.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] coleschomer
-[SETUP] Creating student dir:  ./stuwork/coleschomer
-[PRE-WARN]: Expected non-empty: ./stuwork/coleschomer/think-java-coleschomer
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-coleschomer.git]
-Cloning into 'think-java-coleschomer'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/coleschomer/think-java-coleschomer
+[GITWORK] Re-using code.
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
