--- a/stureports/think-java/gaberoessler.think-java_results.html
+++ b/stureports/think-java/gaberoessler.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] gaberoessler
-[SETUP] Creating student dir:  ./stuwork/gaberoessler
-[PRE-WARN]: Expected non-empty: ./stuwork/gaberoessler/think-java-gaberoessler
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-gaberoessler.git]
-Cloning into 'think-java-gaberoessler'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/gaberoessler/think-java-gaberoessler
+[GITWORK] Re-using code.
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
