--- a/stureports/think-java/kaifouts.think-java_results.html
+++ b/stureports/think-java/kaifouts.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] kaifouts
-[SETUP] Creating student dir:  ./stuwork/kaifouts
-[PRE-WARN]: Expected non-empty: ./stuwork/kaifouts/think-java-kaifouts
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-kaifouts.git]
-Cloning into 'think-java-kaifouts'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/kaifouts/think-java-kaifouts
+[GITWORK] Re-using code.
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
