--- a/stureports/think-java/slammensam.think-java_results.html
+++ b/stureports/think-java/slammensam.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] slammensam
-[SETUP] Creating student dir:  ./stuwork/slammensam
-[PRE-WARN]: Expected non-empty: ./stuwork/slammensam/think-java-slammensam
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-slammensam.git]
-Cloning into 'think-java-slammensam'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/slammensam/think-java-slammensam
+[GITWORK] Re-using code.
 
 *[BEGIN chapter2]
   [EXPECTED TARGETS] ['Date', 'Time']]
